# RubezAI

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  make.ps1
cli/: Dockerfile
docs/: API.md  ARCHITECTURE.md  PLAN.md  SECURITY_CHECKLIST.md  SSH_CLI_MODELS.md  (+1 more)
rubezh-sanitizer/: .dockerignore  Dockerfile  conftest.py  pyproject.toml
rubezh-sanitizer/app/: __init__.py  config.py  deps.py  main.py
rubezh-sanitizer/app/api/: __init__.py  metrics.py  routes.py  schemas.py
rubezh-sanitizer/app/detectors/: __init__.py  base.py  commercial.py  ner.py  pii.py  regex_detector.py  registry.py  secrets.py
rubezh-sanitizer/app/domain/: __init__.py  entities.py  risk.py  sanitization.py
rubezh-sanitizer/app/llm_review/: __init__.py  client.py  detector.py  openai_client.py
rubezh-sanitizer/app/masking/: __init__.py  crypto.py  overlap.py  pipeline.py  pseudonymizer.py
rubezh-sanitizer/tests/: test_commercial_detectors.py  test_contract_compliance.py  test_crypto.py  test_health.py  test_llm_review.py  test_log_safety.py  test_metrics_endpoint.py  test_ner.py  test_overlap.py  test_pii_detectors.py  test_pseudonymizer.py  test_realistic_documents.py  test_risk_scoring.py  test_sanitize_preview.py  test_secret_detectors.py
rubezh-worker/: Dockerfile  pyproject.toml
rubezh-worker/app/: chunking.py  config.py  main.py  minio_client.py  processor.py  queue.py  sanitizer_client.py  storage_writes.py
rubezh-worker/app/embeddings/: __init__.py  factory.py  interface.py  mock.py  openai_compatible.py
rubezh-worker/app/parsers/: __init__.py  docx.py  pdf.py
rubezh-worker/tests/: test_chunking.py  test_embedder_factory.py  test_embeddings.py  test_health.py  test_metrics.py  test_openai_embedder.py  test_parsers.py  test_queue.py
(+254 files in other folders)
