[project]
name = "rubezh-worker"
version = "0.1.0"
description = "Рубеж ИИ — worker: парсинг документов, chunking, embeddings, БД-очередь"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "minio>=7.2",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "tiktoken>=0.8",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "reportlab>=4.0",  # для генерации PDF в тестах парсера
]

# Сервис-приложение, не библиотека.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
